svc.yml
apiVersion: v1
kind: Service
metadata:
  name: hw-svc
  namespace: m
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
  selector:
    app: flask
    tier: backend
